--- a/src/client/index.ejs
+++ b/src/client/index.ejs
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<title>Stash - you list app</title>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
