--- a/src/client/scss/config/_utilities.scss
+++ b/src/client/scss/config/_utilities.scss
@@ -10,3 +10,84 @@
 .u-positive {
 	color: $primaryColor;
 }
+
+//Buttons
+.btn {
+	position: relative;
+    width: 120px;
+    @include m-height(30px);
+    background-color: $primaryColor;
+    color: $primaryTextColor;
+    border: 0;
+    outline: 0;
+    box-shadow: $boxShadow-default;
+}
+.btn:hover {
+	box-shadow: $boxShadow-hover;
+}
+.btn:active {
+	top: 1px;
+}
+.btn-add-wrapper {
+	position: absolute;
+	top: 2px;
+	right: 10px;
+}
+.btn-add {
+	z-index: 1;
+	position: relative;
+    top: 20px;
+    right: 20px;
+    height: 56px;
+    width: 56px;
+    text-align: center;
+    background-color: $accentColor;
+    border-radius: 56px;
+    box-shadow: $boxShadow-default;
+    cursor: pointer;
+}
+.btn-add .material-icons {
+	line-height: 56px;
+	font-size: 46px;
+	color: $textPrimaryColor;
+}
+.btn-add-wrapper:hover .btn-add {
+	box-shadow: $boxShadow-hover;
+}
+.btn-add-wrapper:active .btn-add {
+	top: 21px;
+}
+
+//Modals
+.modal-overlay {
+	z-index: $zIndex-overlay;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+    height: 100%;
+}
+.modal {
+	z-index: $zIndex-modal;
+	position: absolute;
+    top: 25%;
+    left: 25%;
+	background-color: white;
+    width: 50%;
+    height: 50%;
+    border-radius: $bRadius-default;
+    box-shadow: $boxShadow-default;
+}
+
+// Forms 
+.input {
+	margin-bottom: 15px;
+	width: 100%;
+	font-size: $fontSize-extraLarge;
+	border: 0;
+	outline: 0;
+	border-bottom: 1px solid $dividerColor;
+}
