--- a/src/client/index.ejs
+++ b/src/client/index.ejs
@@ -1,8 +1,9 @@
 <html>
 <head>
-	<title>Stash - you list app</title>
+	<title>Stash - keep track of your savings</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="shortcut icon" type="image/png" href="favicon.png"/>
 </head>
 <body>
 	<div id="app"></div>
