--- a/src/client/scss/modules/_savingsList.scss
+++ b/src/client/scss/modules/_savingsList.scss
@@ -11,18 +11,55 @@
 	cursor: pointer;
 }
 .savingsList-content-element .completed-percentage,
-.savingsList-content-element .completed-value {
+.savingsList-content-element .completed-value,
+.savingsList-content-element .due-date,
+.savingsList-content-element .due-in {
 	@include m-height(20px);
 }
+.savingsList-content-element .completed-percentage {
+	padding-top: 5px;
+	font-size: $fontSize-extraLarge;
+}
+.savingsList-content-element .completed-value {
+	font-size: $fontSize-extraSmall;
+}
+
 .savingsList-content-element .title {
+	font-size: $fontSize-medium;
 	color: $primaryTextColor;
 }
 
-.savingsList-content-element--done .completed,
-.savingsList-content-element--done .title {
-	color: $lightPrimaryColor;
+.savingsList-content-element .monthly,
+.savingsList-content-element .due-date {
+	font-size: $fontSize-medium;
+}
+.savingsList-content-element .due-in {
+	font-size: $fontSize-small;
 }
 
+.savingsList-content-element--done .completed {
+	color: $primaryColor;
+}
+.savingsList-content-element--done .completed i {
+	position: absolute;
+	top: 5px;
+	left: 0;
+}
+
+.savingsList-content-element .deleteSaving {
+	display: none;
+	position: absolute;
+	top: 6px;
+	right: 30px;
+}
+
+// Hover effects
 .savingsList-content-element:hover {
-	background-color: $dividerColor;
+	background-color: $lightPrimaryColor;
+}
+.savingsList-content-element:hover .deleteSaving {
+	display: block;
+}
+.savingsList-content-element:hover .deleteSaving:hover {
+	color: $accentColor;
 }
