--- a/src/client/index.ejs
+++ b/src/client/index.ejs
@@ -1,11 +1,16 @@
 <html>
 <head>
-	<title>Stash - keep track of your savings</title>
+	<title>Stash - track your financial goals.</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link rel="shortcut icon" type="image/png" href="favicon.png"/>
 </head>
 <body>
+  <% if(user) { %>
+    <%= user %>
+  <% } else { %>
+    Not logged in
+  <% } %>
 	<div id="app"></div>
 	<script type="text/javascript" src="app.js"></script>
 </body>
