api fetching id instead of email-safer, user data fetch after login, spinner module

--- a/src/client/scss/main.scss
+++ b/src/client/scss/main.scss
@@ -1,6 +1,7 @@
 // Settings
 @import "config/bootstrap.scss";
 @import "config/mixins.scss";
+@import "config/animations.scss";
 @import "config/settings.scss";
 @import "config/utilities.scss";
 
