--- a/src/client/index.ejs
+++ b/src/client/index.ejs
@@ -6,6 +6,7 @@
 	<link rel="shortcut icon" type="image/png" href="favicon.png"/>
 </head>
 <body>
+  <span id="userLoggedIn" userLoggedIn='<%= user %>'></span> 
 	<div id="app"></div>
 	<script type="text/javascript" src="app.js"></script>
 </body>
