added welcome and login page bg image

--- a/src/client/scss/main.scss
+++ b/src/client/scss/main.scss
@@ -5,7 +5,9 @@
 @import "config/settings.scss";
 @import "config/utilities.scss";
 
-// Layout
+// Layout - Server
+@import "layout/welcome.scss";
+// Layout - Client
 @import "layout/navigation.scss";
 
 // Modules
