--- a/src/server/views/index.ejs
+++ b/src/server/views/index.ejs
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Stash - track your financial goals.</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+  </head>
   <body>
-    <h1>Passwordless - Example: Simple-Mail</h1>
-    <p>
-    User: 
-    <% if(user) { %>
-      <%= user %> (<a href='/logout'>logout</a>)
-    <% } else { %>
-      Not logged in
-    <% } %>
-    </p>
-    <ul>
-      <li>
+    <div class="background-image"></div>
+    <div class="welcome-container">
+      <h1 class="headline">Welcome to Stash</h1>
+      <div>
         <a href='/login'>Login / Register</a>
-      </li>
-      <li>
-        <a href='/restricted'>Restricted page</a>
-      </li>
-    </ul>
+      </div>  
+    </div>
   </body>
 </html>
