--- a/src/server/views/sent.ejs
+++ b/src/server/views/sent.ejs
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Stash - track your financial goals.</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+  </head>
   <body>
-    <h1>Email sent</h1>
+    <h1>Email sent!</h1>
     <p>Please check your inbox and click on the link provided</p>
     <ul>
       <li>
-        <a href='/'>Back to homepage</a>
-      </li>
-      <li>
-        <a href='/restricted'>Restricted page</a>
+        <a href='/'>Back to Welcome page</a>
       </li>
     </ul>
   </body>
