--- a/src/server/views/index.ejs
+++ b/src/server/views/index.ejs
@@ -9,9 +9,9 @@
   <body>
     <div class="background-image"></div>
     <div class="welcome-container">
-      <h1 class="headline">Welcome to Stash</h1>
+      <h1 class="headline">Set your financial goals</h1>
       <div>
-        <a href='/login'>Login / Register</a>
+        <a class="btn-start" href='/login'>Start stashing!</a>
       </div>  
     </div>
   </body>
