--- a/src/server/views/sent.ejs
+++ b/src/server/views/sent.ejs
@@ -7,12 +7,10 @@
     <link rel="shortcut icon" type="image/png" href="favicon.png"/>
   </head>
   <body>
-    <h1>Email sent!</h1>
-    <p>Please check your inbox and click on the link provided</p>
-    <ul>
-      <li>
-        <a href='/'>Back to Welcome page</a>
-      </li>
-    </ul>
+    <div class="background-image"></div>
+    <div class="welcome-container">
+      <h1 class="headline">Email sent!</h1>
+      <p>Please check your inbox and click on the link provided</p> 
+    </div>
   </body>
 </html>
