Add goals data from database

--- a/src/client/scss/main.scss
+++ b/src/client/scss/main.scss
@@ -3,6 +3,7 @@
 @import "config/mixins.scss";
 @import "config/animations.scss";
 @import "config/settings.scss";
+@import "config/base.scss";
 @import "config/utilities.scss";
 
 // Layout - Server
