--- a/src/server/views/index.ejs
+++ b/src/server/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Stash - track your financial goals.</title>
+    <title>ScroogeVault - track your financial goals.</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="shortcut icon" type="image/png" href="favicon.png"/>
@@ -9,7 +9,7 @@
   <body>
     <div class="background-image"></div>
     <div class="welcome-container">
-      <h1 class="headline">Set your financial goals</h1>
+      <h1 class="headline">ScroogeVault - Set your financial goals</h1>
       <div>
         <a class="btn-start" href='/login'>Start stashing!</a>
       </div>  
