--- a/src/client/index.ejs
+++ b/src/client/index.ejs
@@ -1,12 +1,12 @@
 <html>
 <head>
-	<title>Stash - track your financial goals.</title>
+	<title>ScroogeVault - track your financial goals.</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link rel="shortcut icon" type="image/png" href="favicon.png"/>
 </head>
 <body>
-  <span id="userLoggedIn" userLoggedIn='<%= user %>'></span> 
+  <span id="userLoggedIn" userLoggedIn='<%= user %>' server_env='<%= server_env %>'></span> 
 	<div id="app"></div>
 	<script type="text/javascript" src="app.js"></script>
 </body>
