--- a/src/server/views/login.ejs
+++ b/src/server/views/login.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Stash - track your financial goals.</title>
+    <title>ScroogeVault - track your financial goals.</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="shortcut icon" type="image/png" href="favicon.png"/>
