Revert back to working plugins

--- a/src/client/scss/modules/_overviewStatus.scss
+++ b/src/client/scss/modules/_overviewStatus.scss
@@ -1,3 +1,7 @@
+.overviewStatus {
+  padding-bottom: 30px;
+  border-bottom: 1px solid gray;
+}
 .overviewStatus-title {
 	font-size: $fontSize-small;
 }
