--- a/src/server/views/index.ejs
+++ b/src/server/views/index.ejs
@@ -1,19 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ScroogeVault - track your financial goals.</title>
+    <title>ScroogeVault - Track your financial goals.</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="shortcut icon" type="image/png" href="favicon.png"/>
   </head>
   <body>
-    <div class="background-image"></div>
-    <div class="welcome-container">
-      <h1 class="headline">ScroogeVault - Set your financial goals</h1>
-      <div>
-        <a class="btn-start" href='/login'>Start stashing!</a>
-      </div>  
+  <div class="section-main" style="background-image: url('images/welcome.jpg')">
+    <div class="content">
+      <h1 class="title">
+        <span>Track your financial goals and savings.</span>
+      </h1>
+      <h2 class="subtitle">
+        <span>Spending each month without the financial stress.</span>
+      </h2>
+      <a class="btn-start" href='/login'>Start stashing</a>
     </div>
+  </div>
+  <div class="features">
+    <div class="feature">
+      <h3>Not sure how much to spend this month?</h3>
+      <p>A bunch of apps out there offer expense/income/budget tracking but none give insight about how much should you actually save up.</p>
+    </div>
+    <div class="feature">
+      <h3>We have a better way.</h3>
+      <p>We are offering an easy way to organize future expenses/income and overview monthly savings or spending power!</p>
+    </div>
+    <div class="feature">
+      <h3>ScroogeVault is 100% free.</h3>
+      <p>Don't worry, there are no fees involved and no bank accounts information needed, we are just offering a glorified calculator and a way to unload the burden of financial planning.</p>
+    </div>
+  </div>
   </body>
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
