--- a/src/server/views/sent.ejs
+++ b/src/server/views/sent.ejs
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ScroogeVault - track your financial goals.</title>
+    <title>ScroogeVault - Track your financial goals.</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="shortcut icon" type="image/png" href="favicon.png"/>
   </head>
   <body>
-    <div class="background-image"></div>
-    <div class="welcome-container">
-      <h1 class="headline">Email sent!</h1>
-      <p>Please check your inbox and click on the link provided</p> 
+    <div class="section-main login" style="background-image: url('images/welcome.jpg')">
+      <div class="content">
+        <h1 class="title">
+          <span>Email sent!</span>
+        </h1>
+        <h2 class="subtitle">
+          <span>Please check your inbox and click on the link provided</span>
+        </h2>
+      </div>
     </div>
   </body>
   <script>
